--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images\Back.jpg") no-repeat center;
+    background: url("images/Back.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
